添加右上角跳转路由链接

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     </head>
     <body ms-controller="root">
         <!-- 头部样式 -->
-        <div class="m-header">
+        <div class="m-header" style="color: white;">
             头部样式
+            <div class="act f-fr">
+                <a href="/#!/setting/accountSet/" style="color: white;" >设置模块</a>
+            </div>
         </div>
         <!-- 头部样式 end-->
         <!-- 主体内容区域 -->
@@ -25,7 +28,6 @@
 
     <script src="/build/script/lib/jquery-1.11.1.min.js"></script>
     <script src="/build/script/lib.js"></script>
-    <script src="/build/script/jq.js"></script>
     <script src="/build/script/route.js"></script>
     </body>
 </html>
